--- a/templates/index.html
+++ b/templates/index.html
@@ -27,7 +27,7 @@
             <div class="presence">
                 <th class="table__header"> Présence </th>
                 <div class="checkbox_box">
-                    <form action="/data" method="POST">
+                    <form action="/data" method="POST" class="form">
                         <input class="table__checkbox" type="checkbox" name="estpresent" value="0"  checked>
                         <input class="table__checkbox" type="checkbox" name="estpresent" value="1" checked>
                         <input class="table__checkbox" type="checkbox" name="estpresent" value="2" checked>
