--- a/static/styles.css
+++ b/static/styles.css
@@ -31,7 +31,7 @@ flex-direction: column;
 .tableau{
     max-width: 40%;
     /* margin: auto; */
-    border: 1px solid #73AD21;
+    /* border: 1px solid #73AD21; */
     display: flex;
     flex-direction: row;
     align-items: flex-start;
